Bug 46271 - UI: Vertical scroll bar cannot be properly dragged under Mac OS X 10.7 and 10.8
Summary: UI: Vertical scroll bar cannot be properly dragged under Mac OS X 10.7 and 10.8
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) macOS (All)
: lowest major
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1
Keywords:
: 48860 53351 60247 60295 (view as bug list)
Depends on:
Blocks: macOS-UI-polish
  Show dependency treegraph
 
Reported: 2012-02-18 19:09 UTC by Kal Sze
Modified: 2014-07-20 07:50 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shapshots and description of scroll bar bug (98.33 KB, image/jpeg)
2012-05-14 10:07 UTC, noibsguy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kal Sze 2012-02-18 19:09:45 UTC
Problem description: 
The handle of the vertical scroll bar has a very small clickable area that does not match the handle's length; it's confined to the very top of the handle.

Steps to reproduce:
1. Open a large enough document in Writer so that the vertical scroll bar appears.
2. Click somewhere between the middle and the bottom of the handle of the vertical scroll bar.

Current behavior:
Writer will directly page-down the document.

Expected behavior:
Be able to drag the handle.

Platform (if different from the browser): Mac OS X Lion 10.7.3

Additional discussion already in the mailing list:
http://nabble.documentfoundation.org/Problem-with-vertical-scroll-bar-in-LibreOffice-Writer-3-5-for-Mac-OS-X-tp3752844p3752844.html

Browser: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/535.11 (KHTML, like Gecko) Chrome/17.0.963.56 Safari/535.11
Comment 1 fabien.michel 2012-05-03 02:44:34 UTC
*** Bug 48860 has been marked as a duplicate of this bug. ***
Comment 2 fabien.michel 2012-05-03 02:46:22 UTC
Always occur with LibreOffice 3.5.3.2 / Version ID : 235ab8a-3802056-4a8fed3-2d66ea8-e241b80
on MacOS Lion 10.7.3
Comment 3 noibsguy 2012-05-14 10:07:19 UTC
Created attachment 61634 [details]
Screen shapshots and description of scroll bar bug
Comment 4 noibsguy 2012-05-14 10:07:49 UTC
This has been bothering me since Mac OS 10.7.0.  I've added a JPEG showing what I'll describe below.

I have several 300+ page writer documents.  When at the beginning of those documents, in order to select the scroll bar (which is really tiny in such large documents), you have to position the pointer about 1/4" BELOW the scroll bar.  If you do that, you can select and drag the scroll bar.

At the bottom of a large document, to select the scroll bar requires positioning the pointer about 1/4" AVOVE the actual scroll bar.

When at the middle of a large document, the scroll bar can be selected normally.

I've converted the same long documents to MS Word format and Word doesn't exhibit this problem.  Same for Apple's TextEdit.  And, it did start with Mac Lion (10.7) when Apple changed the appearance of the scroll bars.

Not a critical but, but somewhat annoying.  Also, it only happens in long documents when the size of the scroll bar shrinks pretty small.  I don't know what the magic number of pages is; however, as the number of pages increases, the area of selection on the scroll bar begins to decrease.
Comment 5 fabien.michel 2012-05-22 00:26:41 UTC
Always occur with LibreOffice 3.5.4.1  Version ID : 7306755-f4f605c-738527d-1cf4bc1-9930dc8
on MacOS Lion 10.7.3
Comment 6 fabien.michel 2012-06-18 01:54:45 UTC
Always occur in 
Version 3.6.0beta1 (Build ID: 1f1cdd8)
Comment 7 david.lazarus 2012-07-12 07:36:07 UTC
Problem also occurs in Calc 3.4.5, OS X 10.7.4.  Affects only larger documents. Spreadsheet with >4K rows - grabbable handle is invisible, ca 1 cm below/above grey scroll button region; small sheet of 40 rows - scroll button is several times larger, grabbable as expected.
Comment 8 fabien.michel 2012-09-06 10:08:47 UTC
Always occur in 
Version 3.6.1.2 (Build ID: e29a214)
I will attach this bug to the most annoying bugs in 3.6
Comment 9 Ward van Wanrooij 2012-09-07 19:44:05 UTC
The problem might be explained by this note, where the small deviations are multiplied.

vcl/source/control/scrbar.cxx
/*  #i77549#
    HACK: for scrollbars in case of thumb rect, page up and page down rect we
    abuse the HitTestNativeControl interface. All theming engines but aqua
    are actually able to draw the thumb according to our internal representation.
    However aqua draws a little outside. The canonical way would be to enhance the
    HitTestNativeControl passing a ScrollbarValue additionally so all necessary
    information is available in the call.
    .
    However since there is only this one small exception we will deviate a little and
    instead pass the respective rect as control region to allow for a small correction.

    So all places using HitTestNativeControl on PART_THUMB_HORZ, PART_THUMB_VERT,
    PART_TRACK_HORZ_LEFT, PART_TRACK_HORZ_RIGHT, PART_TRACK_VERT_UPPER, PART_TRACK_VERT_LOWER
    do not use the control rectangle as region but the actuall part rectangle, making
    only small deviations feasible.
*/
Comment 10 Roman Eisele 2012-10-05 08:46:01 UTC
*** Bug 50474 has been marked as a duplicate of this bug. ***
Comment 11 RTouris 2012-10-31 19:35:50 UTC
/rant on

My apologies if this is not the place to issue complaints and all but I believe this bug has been with us for a good year now...anyone would be so kind as to let us know if and when this is supposed to be looked into? I find it increasingly frustrating to work with large (i.e. many pages) word and excel documents knowing that this behaviour will kick into my workload given the first opportunity. Please please someone at least put a timeframe into resolving it..

P.S. I'm on 10.7.5, i believe this also stands true for 10.8.x...Most of the people i know have already jumped ship and abandoned 10.6.8, it's a pitty that LibreOffice still exhibits the same crappy vertical scrollbar bug, a pitty to say the least.

/rant off
Comment 12 Kal Sze 2012-11-01 03:36:44 UTC
(In reply to comment #10)
> *** Bug 50474 has been marked as a duplicate of this bug. ***

Bug 50474 doesn't look like a duplicate of this bug. Are you sure you didn't mistype the bug number?
Comment 13 Stephen Rasku 2012-11-01 13:40:25 UTC
It's not a duplicate.  See:

https://bugs.freedesktop.org/show_bug.cgi?id=50474#c6
Comment 14 fabien.michel 2012-11-15 11:57:36 UTC
Always occurs with Version 3.6.3.2 (Build ID: 58f22d5) On Mac OS X Lion 10.7.5
Comment 15 Kal Sze 2012-12-06 08:56:42 UTC
I just noticed that the problem is not restricted to the main document window, but possibly to vertically scrollable areas in general.

For instance, you can see the same problem with the typeface selection drop-down, when you have lots of typefaces installed.

Mac OS X Lion 10.7.5
LibreOffice 3.6.4
Comment 16 John T 2012-12-30 17:32:00 UTC
I can confirm that the issue is still present on Mac OS 10.8.2, LibreOffice version 3.6.4.3.

There are workarounds (click above the scrubber or use a trackpad gesture to scroll), but there is no quick way to go to the top of a long document.

Might this issue get in the queue for the next version?
Comment 17 noibsguy 2012-12-30 19:15:50 UTC
I'm the originator of this bug report.  Let me also add that this bug, when using the same very long documents, is not present in other Mac OS X apps.

I took a 300 page .odt document I have and saved it as a .doc file.  I then opened that file in both Word for Mac (latest version) and Apple's Pages (latest version).  In both cases I could grab the small visible scroll bar and drag it.

When I first found this bug I was sure it was a general Mac OS X bug but that isn't the case.
Comment 18 fabien.michel 2013-01-02 07:59:19 UTC
For information,
We have payed someone to work on this issue.
I hope it will be resolved soon.
Comment 19 Sean 2013-02-07 20:37:11 UTC
*** Bug 60295 has been marked as a duplicate of this bug. ***
Comment 20 Jorendc 2013-02-10 18:06:40 UTC
*** Bug 60247 has been marked as a duplicate of this bug. ***
Comment 21 burkhard 2013-04-19 16:05:59 UTC
Problem still exists in 4.0.2.2. 

When the cursor is at the beginning of a long document, the scrollbar indicator can actually be dragged by starting to drag from just below the indicator, and when at the end of the document, dragging works if you start dragging just above the indicator. While dragging, one notices that the scrollbar indicator overtakes the mouse, so it seems that mouse position and scrollbar indicator are somehow out of sync. The same error shows up e.g. in the various font combo boxes.

Cheers

Burkhard.
Comment 22 Alex Thurgood 2013-06-10 15:00:45 UTC
*** Bug 53351 has been marked as a duplicate of this bug. ***
Comment 23 wyatt biker 2013-06-10 17:07:09 UTC
I just downloaded LO and have found a small issue.  Sliders/scrollers
especially small sized will not scroll home easily using the sidebar.
Sometimes the only way is to use the mouse wheel over the list to make them
scroll.

Attached is an image of one example. Notice vertical slide scrollbar is at
the bottom.  Using the mouse I cannot grab it to slide upward. I am using
Mac OS X Mountain Lion. Same problem with horizontal sliders especially the
spreadsheets.

Using the mouse "wheel" vertically or horizontally works perfectly. 

Can this be corrected?
Comment 24 Commit Notification 2013-07-24 20:41:13 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8c467d134c1c49d2b25c72fbd45dd1c6b77b171

fdo#46271: No arrows in scrollbars in OS X 10.7 and later



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2013-07-25 08:19:13 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c64554aec5a90daa800dd3a70b777dca510c56dc&h=libreoffice-4-1

fdo#46271: No arrows in scrollbars in OS X 10.7 and later


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Emir Sarı 2013-08-01 08:47:39 UTC
I cannot reproduce this issue anymore, if someone else can also confirm then we can close this issue.  @Joren, could you try to reproduce this?

@Tor, thank you very much for this fix.
Comment 27 Ralph Martin 2013-08-01 09:33:18 UTC
I confirm the bug has been squashed in the nightly of 31 July.

This makes LibreOffice much more usable. Thanks!
Comment 28 Emir Sarı 2013-08-01 09:35:42 UTC
And this is history.
Comment 29 Kal Sze 2013-08-01 09:39:36 UTC
Excellent news!

I know this bug is now closed and all, but ...

Would anybody have access to Maverick Developer Preview to test it there as well?
Comment 30 RTouris 2013-08-02 12:16:34 UTC
Although I can attest to how much better the behavior now is, the issue is surely not solved yet.

In creating a new doc and inserting several blank pages (using cmd+enter) to the extend that the scrollbar becomes quite small (similar to having a 100page document open) trying to click the lower edge of it yields a page down result. In addition clicking the upper edge seems to exhibit an inversely proportional to the previous action extra space that yields an "active" scrollbar ready to be pushed either upwards or downwards.

Again..this is hugely better than before but surely still there.. :/
Comment 31 noibsguy 2013-08-02 14:58:15 UTC
The bug is fixed is the latest nightly builds of LibreOffice--not the released version.  After Ralph Martin's confirmation earlier in this thread, I downloaded the latest nightly build to confirm that the bug has been fixed.  I used a 300-page LO Writer document.  I had to see for myself that this has been fixed--and it has.

I have no idea how it will take for the fix to make it into the released version of LO, but it is coming.
Comment 32 RTouris 2013-08-02 19:11:06 UTC
I'm also referring to the latest daily builds of LO in which the "fix" has been issued, found here: http://dev-builds.libreoffice.org/daily/libreoffice-4-1/MacOSX-10.8@21-10.7SDK/ as seen below:

http://img844.imageshack.us/img844/6521/jdkc.png
Comment 33 tommy27 2013-08-03 07:56:06 UTC
(In reply to comment #32)
> I'm also referring to the latest daily builds of LO in which the "fix" has
> been issued, found here:
> http://dev-builds.libreoffice.org/daily/libreoffice-4-1/MacOSX-10.8@21-10.
> 7SDK/ as seen below:
> 
> http://img844.imageshack.us/img844/6521/jdkc.png

I don't have a Mac to test, but as far as I see, there's just a small position shift between the scrollbar and the effective drag area... does it really impairs user experience?
Comment 34 RTouris 2013-08-03 09:37:37 UTC
It doesn't to the extend that it used to, but still it's wrong to state that the bug's been fixed. It's miles better than before don't get me wrong, yet still not quite there yet.
Comment 35 tommy27 2013-08-03 09:59:45 UTC
@RTouris
so would it be right to say that the fix improved the situation from major annoyance to minor annoyance?
Comment 36 RTouris 2013-08-03 18:19:06 UTC
indeed
Comment 37 tommy27 2013-08-03 20:27:06 UTC
so, let's remove it from the Most Annoying Bugs list
Comment 38 Felipe 2013-08-29 09:11:14 UTC
Same problem as described, but reproduced even with a "short" document (e.g., a 2-page document in Writer, but same in Calc, not tested in others). When the vertical scroll bar goes down (almost half the document), the shape do not correspond to the clickable area.
It is more evident in large documents, of course. In large documents, the scroll bar behaves properly only above 1/4 of the bar.
Using MacOS 10.8, but it also happened in 10.7 at the least, and since Libreoffice 3.x (not quite sure when I first noticed).

I consider this is an important issue. It is annoying enough to prevent unaware users from using Writer, for instance.
Comment 39 Felipe 2013-08-29 09:11:50 UTC
(In reply to comment #33)
> (In reply to comment #32)
> > I'm also referring to the latest daily builds of LO in which the "fix" has
> > been issued, found here:
> > http://dev-builds.libreoffice.org/daily/libreoffice-4-1/MacOSX-10.8@21-10.
> > 7SDK/ as seen below:
> > 
> > http://img844.imageshack.us/img844/6521/jdkc.png
> 
> I don't have a Mac to test, but as far as I see, there's just a small
> position shift between the scrollbar and the effective drag area... does it
> really impairs user experience?

Yes. Quite a lot.
Comment 40 Felipe 2013-08-29 09:17:34 UTC
(In reply to comment #37)
> so, let's remove it from the Most Annoying Bugs list

No, please. I can tell you this bug has been annoying me really a lot. Maybe some users do not click at the vertical scroll bar at all, but I use it constantly to revise documents in Writer. It makes the scroll bar unusable even in rather short documents.

This kind of bugs gives a very bad impression of the product to MacOS users. Not to me, but to standard users that just want to write a document, not filing an error and patiently waiting for it to be solved.
Comment 41 Felipe 2013-08-29 09:58:21 UTC
(In reply to comment #40)
> (In reply to comment #37)
> > so, let's remove it from the Most Annoying Bugs list
> 
> No, please. I can tell you this bug has been annoying me really a lot. Maybe
> some users do not click at the vertical scroll bar at all, but I use it
> constantly to revise documents in Writer. It makes the scroll bar unusable
> even in rather short documents.
> 
> This kind of bugs gives a very bad impression of the product to MacOS users.
> Not to me, but to standard users that just want to write a document, not
> filing an error and patiently waiting for it to be solved.

Sorry, not noticed that it was solved in the pre-release (I thought you were talking of 4.1, which I just downloaded). Thank you for fixing it.
Comment 42 raupe27k 2014-03-17 14:42:06 UTC
As it was mentioned in Comment 30 that the patch alleviated the bug but didn't fix it completely, here is some info to fix the bug completely:
You have to copy some parts of the source code of NeoOffice 3.2 Patch 5, which was released in July 2011 and which fixed the scroll bar bug completely for NeoOffice users.
Further details can be read on https://issues.apache.org/ooo/show_bug.cgi?id=121583 from my 3rd comment.
I don't know if the Apache OpenOffice staff has noticed my comments there, because nobody reacted to my comments so far. Maybe somebody of the LibreOffice staff can work together with the Apache OpenOffice staff to extract the bug fix from NeoOffice's source code or somebody of the LibreOffice staff can extract it on his own?
Comment 43 tommy27 2014-07-20 07:50:21 UTC
@raupe27k
please open a followup bug report about residual issues with current LibO 4.2.5.2 release and put the current bug number under "See also"