fdo#46271: No arrows in scrollbars in OS X 10.7 and later

So no need to take them into account when calculating the geometries
of the scrollbar parts.

Change-Id: Ie8d4b38107466663e6ff8c26aec3537638976f98